deploy/demo/env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-admin-service
  labels:
    app: catalog-admin-service
spec:
  template:
    spec:
      containers:
        - name: catalog-admin-service
