deploy/demo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-admin-service
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: '6'
    nginx.ingress.kubernetes.io/limit-burst-multiplier: '2'
    nginx.ingress.kubernetes.io/limit-whitelist: '10.0.0.0/8'
    nginx.ingress.kubernetes.io/server-snippet: |
      server_tokens off;
      location ~ ^/(ping|ready|prometheus) {
        deny all;
        return 404;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: catalog-admin-service.demo.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: catalog-admin-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
